--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.5",
     "morgan": "^1.10.0",
+    "node-geocoder": "^4.2.0",
     "slugify": "^1.6.5"
   }
 }
