--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^6.4.5",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
